Added task for sass and js, installed bootstrap and browserify

--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -1,2 +1,9 @@
-body
-    background: blue
+@function font-path($path)
+  @return $path
+
+
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-compass"
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-sprockets"
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
+
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed')
