--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -7,3 +7,7 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
 
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed')
+
+body
+    font-family: 'Fira Sans Condensed', sans-serif
+    font-size: 160%
