Added watch task for ejs and routes

--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Pure Gym - Holloway</title>
+	<title>Pure Gym</title>
 	<meta name="description" content="Low cost 24 Hour Gym, located in North London - Holloway">
 	<meta name="keywords" content="london gym, cheap gym, 24 hours gym, north london, holloway, islington, archway">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>HAHA!</h1>
+<h1></h1>
 <script src="js/main.js"></script>
 </body>
 </html>
