--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -1,18 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<title>Pure Gym</title>
-	<meta name="description" content="Low cost 24 Hour Gym, located in North London - Holloway">
-	<meta name="keywords" content="london gym, cheap gym, 24 hours gym, north london, holloway, islington, archway">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <link rel="shortcut icon" href="css/favicon.ico">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+<%include partials/templates/html_head%>
 <body>
-
+<%include partials/templates/header%>
 <h1></h1>
-<script src="js/main.js"></script>
+<%include partials/templates/scripts%>
 </body>
 </html>
