Started styling header + added partials in sass

--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -1,13 +1,3 @@
-@function font-path($path)
-  @return $path
-
-
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-compass"
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-sprockets"
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
-
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed')
-
-body
-    font-family: 'Fira Sans Condensed', sans-serif
-    font-size: 160%
+@import 'variables'
+@import 'globals'
+@import 'header'
