--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -1,26 +1,28 @@
-<header>
-    <nav class="nav navbar navbar-default navbar-fixed-top">
+<header class="header">
+    <nav class="navigation nav navbar navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-menu" aria-expanded="false">
-						<span class="sr-only">Rozwiń nawigację</span>
+					<button type="button" class="navbar-toggle collapsed navigation__button" data-toggle="collapse" data-target="#collapse-menu" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#home" class="navbar-brand"><span class="sr-only">Logo</span></a>
+                    <a class="navbar-brand" href="/">
+                        SkiJumping 2017/18
+                     </a>
 				</div><!--navbar-header-->
 
 				<div class="collapse navbar-collapse" id="collapse-menu">
+
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#home">Główna</a></li>
-						<li><a href="#o-nas">O nas</a></li>
-						<li><a href="#oferta-id">Oferta</a></li>
-						<li><a href="#portfolio-id">Portfolio</a></li>
-						<li><a href="#pytania">Pytania</a></li>
-						<li><a href="#kontakt">Kontakt</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/team">Team</a></li>
+						<li><a href="/calendar">Calendar</a></li>
 					</ul>	<!--menu list-->
 				</div><!--navbar-collapse-->
 			</div><!--container-->
 		</nav><!--nav-->
+
+
 </header>
