Added styling for navbar

--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -15,10 +15,10 @@
 
 				<div class="collapse navbar-collapse" id="collapse-menu">
 
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="/">Home</a></li>
-						<li><a href="/team">Team</a></li>
-						<li><a href="/calendar">Calendar</a></li>
+					<ul class="nav navbar-nav navbar-right navigation-list">
+						<li class="navigation-list__list-item"><a href="/">Home</a></li>
+						<li class="navigation-list__list-item"><a href="/team">Team</a></li>
+						<li class="navigation-list__list-item"><a href="/calendar">Calendar</a></li>
 					</ul>	<!--menu list-->
 				</div><!--navbar-collapse-->
 			</div><!--container-->
