--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -1,8 +1,9 @@
 <header class="header">
-    <nav class="navigation nav navbar navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed navigation__button" data-toggle="collapse" data-target="#collapse-menu" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -13,8 +14,7 @@
                      </a>
 				</div><!--navbar-header-->
 
-				<div class="collapse navbar-collapse" id="collapse-menu">
-
+				<div class="navbar-collapse collapse" id="navbar">
 					<ul class="nav navbar-nav navbar-right navigation-list">
 						<li class="navigation-list__list-item"><a href="/">Home</a></li>
 						<li class="navigation-list__list-item"><a href="/team">Team</a></li>
