--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -7,3 +7,5 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
 
 @import url('https://fonts.googleapis.com/css?family=Mitr:300,400,600')
+
+$background-color: #ededed
