--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -6,4 +6,6 @@
         background-color: #fff
         margin-bottom: 15px
         padding: 10px 15px
-        box-shadow: 2px 2px 4px 1px rgba(0,0,0,.5)
+        box-shadow: 2px 2px 4px 0px rgba(0,0,0,.5)
+        +modifier('passed')
+            box-shadow: 2px 2px 4px 0px green
