--- a/resources/sass/_header.sass
+++ b/resources/sass/_header.sass
@@ -3,7 +3,7 @@
     height: 400px
     background: url('../images/banner.jpg') no-repeat top center
     background-size: cover
-    border-bottom: 5px solid #000
+    border-bottom: 5px solid $main-grey
 
 .navigation
     height: 52px
@@ -44,3 +44,6 @@
         background-color: rgba(244, 66, 66,.75)
         margin: 1px -15px
         text-align: center
+
+    .header
+        height: 200px
