--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -9,3 +9,5 @@
 @import url('https://fonts.googleapis.com/css?family=Mitr:300,400,600')
 
 $background-color: #ededed
+$main-grey: #8a8a8a
+$green-completed: rgba(52, 175, 7,.85)
