--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -1,3 +1,11 @@
+.calendar-header
+    display: block
+    border: 3px solid $main-grey
+    color: $main-grey
+    width: 75%
+    margin: 20px auto
+    padding: 20px
+
 .calendar-list
     list-style-type: none
     padding-left: 0
@@ -7,5 +15,18 @@
         margin-bottom: 15px
         padding: 10px 15px
         box-shadow: 2px 2px 4px 0px rgba(0,0,0,.5)
+        font-weight: 400
+        position: relative
         +modifier('passed')
-            box-shadow: 2px 2px 4px 0px green
+            box-shadow: 2px 2px 4px 0px $green-completed
+
+.completed
+    position: absolute
+    top: 10px
+    right: 15px
+    color: $green-completed
+
+.read-more
+    position: absolute
+    bottom: 10px
+    right: 15px
