Added icons + routing for hills

--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -15,8 +15,11 @@
         margin-bottom: 15px
         padding: 10px 15px
         box-shadow: 2px 2px 4px 0px rgba(0,0,0,.5)
+        border-top: 1px solid $main-grey
+        border-left: 1px solid $main-grey
         font-weight: 400
         position: relative
+
         +modifier('passed')
             box-shadow: 2px 2px 4px 0px $green-completed
 
