--- a/app/views/view_calendar.ejs
+++ b/app/views/view_calendar.ejs
@@ -22,10 +22,10 @@
 						<li class="calendar-list__item">
 					<%}%>
 						<p>Date: <%=item.date%></p>
-						<p>Place: <%=item.place%>, <%=item.country%></p>
+						<p>Place: <%=item.place%>, <%=item.country%> <img src="images/<%=item.country%>.png"></p>
 						<p>Type: <%=item.type%></p>
 
-						<p class="read-more"><a href="/">Read more</a></p>
+						<p class="read-more"><a href="/<%=item.place%>">Read more...</a></p>
 					</li>
 				</div>
 			<%if (index%2) {%>
