Added some photos

--- a/app/views/view_hill.ejs
+++ b/app/views/view_hill.ejs
@@ -3,7 +3,15 @@
 <%include partials/templates/html_head%>
 <body>
 <%include partials/templates/header%>
-<h1></h1>
-<%include partials/templates/scripts%>
 
+<div class="container">
+    <div id="image-header" class="image-header">
+
+    </div>
+    <h1 class="text-center"><%=data.place%>, <%=data.country%></h1>
+</div><!--container-->
+
+
+<%include partials/templates/scripts%>
+</body>
 </html>
