Added data about the hills + remaining photos

--- a/app/views/view_hill.ejs
+++ b/app/views/view_hill.ejs
@@ -9,6 +9,9 @@
 
     </div>
     <h1 class="text-center"><%=data.place%>, <%=data.country%></h1>
+    <h2><%=data.name%></h2>
+    <p><%=data.description%></p>
+    <iframe width="560" height="315" src="<%=data.yt%>" frameborder="0" allowfullscreen></iframe>
 </div><!--container-->
 
 
