Done some styling on calendar header and hill theme

--- a/app/views/view_calendar.ejs
+++ b/app/views/view_calendar.ejs
@@ -17,7 +17,7 @@
 				<div class="col-md-6">
 					<%if(item.dateObj<today){%>
 						<li class="calendar-list__item calendar-list__item--passed">
-							<p class="completed">COMPLETED</p>
+							<p class="completed">COMPLETED &#9745;</p>
 					<%} else { %>
 						<li class="calendar-list__item">
 					<%}%>
