--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -11,3 +11,8 @@
 $background-color: #ededed
 $main-grey: #8a8a8a
 $green-completed: rgba(52, 175, 7,.85)
+
+$theme-stormy: #494E6B
+$theme-cloud: #98878F
+$theme-sunset: #985E6D
+$theme-evening: #192231
