--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -1,7 +1,7 @@
 .calendar-header
     display: block
-    border: 3px solid $main-grey
-    color: $main-grey
+    border: 3px solid $theme-evening
+    color: $theme-stormy
     width: 75%
     margin: 20px auto
     padding: 20px
@@ -14,20 +14,18 @@
         background-color: #fff
         margin-bottom: 15px
         padding: 10px 15px
-        box-shadow: 2px 2px 4px 0px rgba(0,0,0,.5)
-        border-top: 1px solid $main-grey
-        border-left: 1px solid $main-grey
+        box-shadow: 2px 2px 4px 0px $theme-stormy
         font-weight: 400
         position: relative
 
         +modifier('passed')
-            box-shadow: 2px 2px 4px 0px $green-completed
+            box-shadow: 2px 2px 4px 0px $theme-sunset
 
 .completed
     position: absolute
     top: 10px
     right: 15px
-    color: $green-completed
+    color: $theme-sunset
 
 .read-more
     position: absolute
