--- a/resources/sass/_hill.sass
+++ b/resources/sass/_hill.sass
@@ -1,28 +1,48 @@
 .row-flex
     display: flex
     flex-direction: row
-    margin: 25px -15px
+    margin: 25px 0
+    +element('column')
+        padding: 50px 0
+
 
 .image-header
     height: 400px
-    border: 5px solid $main-grey
+    border: 5px solid $theme-stormy
     margin: 25px 0
+
     +element('img')
         width: 100%
         height: 100%
         object-fit: cover
         object-position: top
-.col-md-5
-    padding: 20px 0
+
 
 .iframe
     width: 100%
     height: 100%
 
+.table-item
+    +modifier('bold')
+        font-weight: 600
+        letter-spacing: .8px
+    +modifier('light')
+        font-weight: 400
+
+//bootstrap overrrides
+
+.table > thead > tr > th
+    border-bottom: none
+
+.table > tbody > tr > th
+    border-top: none
 @media (max-width: 768px)
     .row-flex
         display: flex
         flex-direction: column
+        +element('column')
+            padding: 15px 0
+
     .image-header
         height: 150px
     .iframe
