Added hills into sub-rout

--- a/app/views/view_calendar.ejs
+++ b/app/views/view_calendar.ejs
@@ -25,7 +25,7 @@
 						<p>Place: <%=item.place%>, <%=item.country%> <img src="images/<%=item.country%>.png"></p>
 						<p>Type: <%=item.type%></p>
 
-						<p class="read-more"><a href="/<%=item.place%>">Read more...</a></p>
+						<p class="read-more"><a href="/hills/<%=item.place%>">Read more...</a></p>
 					</li>
 				</div>
 			<%if (index%2) {%>
