--- a/resources/sass/_hill.sass
+++ b/resources/sass/_hill.sass
@@ -29,6 +29,9 @@
     +modifier('light')
         font-weight: 400
 
+.content
+    text-align: justify
+
 //bootstrap overrrides
 
 .table > thead > tr > th
