--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -15,6 +15,7 @@
         margin-bottom: 15px
         padding: 10px 15px
         box-shadow: 2px 2px 4px 0px $theme-stormy
+        border-radius: 2px
         font-weight: 400
         position: relative
 
