--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -11,8 +11,11 @@
 $background-color: #ededed
 $main-grey: #8a8a8a
 $green-completed: rgba(52, 175, 7,.85)
+$yellow: #FFF176
 
 $theme-stormy: #494E6B
 $theme-cloud: #98878F
 $theme-sunset: #985E6D
 $theme-evening: #192231
+$theme-evening-rgb: rgb(25,34,49)
+$theme-cloud-rgb: rgb(152,135,143)
