--- a/resources/sass/_skijumpers.sass
+++ b/resources/sass/_skijumpers.sass
@@ -1,3 +1,10 @@
+.skijumpers-header
+    padding: 10px
+    background-color: $theme-stormy
+    background: linear-gradient(to right, $theme-stormy, $theme-evening, $theme-stormy)
+    border-radius: 5px
+    color: white
+    border: 2px solid $theme-sunset
 .row-flex-card
     display: flex
 
@@ -47,6 +54,7 @@
             font-weight: 400
             padding: 7px 0 2px 0
             color: $yellow
+            text-decoration: underline
 
 
 @media screen and (max-width: 991px)
@@ -55,6 +63,7 @@
 
     .card
         width: 100%
+        margin: 10px 0
 
 
 @media screen and (min-width: 992px) and (max-width: 1199px)
@@ -66,6 +75,8 @@
 
 
 @media screen and (max-width: 540px)
+    .skijumpers-header
+        font-size: 2.2rem
     .card-details
         flex-direction: column
         +element('image')
