--- a/resources/sass/_hill.sass
+++ b/resources/sass/_hill.sass
@@ -1,15 +1,11 @@
-.row-flex
-    display: flex
-    flex-direction: row
-    margin: 25px 0
-    +element('column')
-        padding: 50px 0
-
+.hill-header
+    @extend .skijumpers-header
 
 .image-header
     height: 400px
-    border: 5px solid $theme-stormy
+    border: 3px solid $theme-sunset
     margin: 25px 0
+    border-radius: 5px
 
     +element('img')
         width: 100%
@@ -17,37 +13,57 @@
         object-fit: cover
         object-position: top
 
+.row-flex
+    display: flex
+    justify-content: space-between
+    margin: 25px 0
 
-.iframe
-    width: 100%
-    height: 100%
 
-.table-item
-    +modifier('bold')
-        font-weight: 600
-        letter-spacing: .8px
-    +modifier('light')
-        font-weight: 400
+.table
+    width: 49%
+    margin: 0
+    border-collapse: separate
+    padding: 50px 0
+    background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
+    background-blend-mode: color
+    background-size: cover
+    color: white
+    border: 3px solid $theme-sunset
+    border-radius: 5px
+    background-color: rgba(0,0,0,.3)
 
-.content
-    text-align: justify
-
-//bootstrap overrrides
 
 .table > thead > tr > th
     border-bottom: none
+    font-weight: 400
+    letter-spacing: .9px
+    text-align: right
+    color: $yellow
 
 .table > tbody > tr > th
     border-top: none
-@media (max-width: 768px)
-    .row-flex
-        display: flex
-        flex-direction: column
-        +element('column')
-            padding: 15px 0
 
-    .image-header
-        height: 150px
+.table > tbody > tr > th:first-child
+    font-weight: 400
+    text-align: right
+    color: $yellow
+
+.table > tbody > tr > th:last-child
+    font-weight: 300
+    text-align: left
+
+.iframe
+    width: 49%
+    border: 3px solid $theme-sunset
+    border-radius: 5px
+
+@media screen and (max-width: 728px)
+    .row-flex
+        flex-direction: column
+    .table
+        width: 100%
+        padding: 25px 0
+        margin-bottom: 25px
     .iframe
-        height: 50vh
-        margin: 0 auto
+        width: 100%
+        height:  312px
