--- a/resources/sass/_hill.sass
+++ b/resources/sass/_hill.sass
@@ -6,7 +6,8 @@
     border: 3px solid $theme-sunset
     margin: 25px 0
     border-radius: 5px
-
+    background-position: top
+    background-size: cover
     +element('img')
         width: 100%
         height: 100%
@@ -23,7 +24,7 @@
     width: 49%
     margin: 0
     border-collapse: separate
-    padding: 50px 0
+    padding: 25px 0
     background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
     background-blend-mode: color
     background-size: cover
@@ -54,10 +55,29 @@
 
 .iframe
     width: 49%
+    height: inherit
     border: 3px solid $theme-sunset
     border-radius: 5px
 
+.hill-description
+    background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
+    background-blend-mode: color
+    background-size: cover
+    padding: 25px 0
+    border-radius: 5px
+    border: 3px solid $theme-sunset
+    +element('content')
+        background-color: rgba(0,0,0, .5)
+        padding: 15px 25px
+        margin: 0
+        color: #fff
+        text-align: justify
+        border-top: 1px solid #fff
+        border-bottom: 1px solid #fff
+
 @media screen and (max-width: 728px)
+    .image-header
+        height: 300px
     .row-flex
         flex-direction: column
     .table
@@ -67,3 +87,7 @@
     .iframe
         width: 100%
         height:  312px
+
+@media screen and (max-width: 540px)
+    .image-header
+        height: 200px
