Started working on main page

--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -3,7 +3,25 @@
 <%include partials/templates/html_head%>
 <body>
 <%include partials/templates/header%>
-<h1></h1>
+
+<main>
+    <section class="lead">
+            <article class="container lead__content">
+                <p class="">Welcome on the Polish Ski Jumpers Fan Page for winter season 2016/2017.
+                    This website was made as a web developement project, that main goal was to practice Express Js.
+                    Please go to <a href="/about" title="Go to About page" class="content__link">'About'</a> section for more details.
+                </p>
+                <p class="">What will you find here? Information about 2016/2017 season such as: polish squad with jumpers details,
+                    calendar of all events and details of all ski jumping hill that will host competitions.
+                </p>
+                <p class="">Welcome in the world of this beautiful sport, where all it matters is pure competition and no negative
+                    emotions! Enjoy this journey!</p>
+            </article>
+
+
+    </section>
+</main>
+
 <%include partials/templates/scripts%>
 </body>
 </html>
