--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -1,7 +1,9 @@
 @import 'variables'
 @import 'mixins'
 @import 'globals'
+
 @import 'header'
 @import 'calendar'
 @import 'hill'
 @import 'skijumpers'
+@import 'index'
