--- a/resources/sass/_globals.sass
+++ b/resources/sass/_globals.sass
@@ -1,6 +1,6 @@
 body
     font-family: 'Mitr', sans-serif
-    font-size: 160%
+    font-size: 16px
     font-weight: 300
     background-color: $background-color
     color: $theme-evening
