Added styling for details section on home page + started working on footer

--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -8,8 +8,9 @@
     +element('item')
         color: white
         background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
-        background-blend-mode: color
         background-size: cover
+        background-position: right top
+        background-blend-mode: color
         margin-bottom: 15px
         padding: 10px 15px
         box-shadow: 2px 2px 4px 0px $theme-sunset
