--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -3,7 +3,8 @@
     background: linear-gradient(to bottom, $theme-stormy, $theme-evening)
     background-blend-mode: color
     background-size: cover
-    padding: 25px 0
+    padding: 50px 0
+    margin-bottom: 50px
     +element('content')
         font-size: 1.6rem
         padding: 15px
@@ -14,3 +15,28 @@
 
 .content__link
     color: $yellow
+
+.contests
+    width: 49%
+    margin: 0
+    padding: 25px
+    background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
+    background-blend-mode: color
+    background-size: cover
+    color: white
+    border: 3px solid $theme-sunset
+    border-radius: 5px
+    background-color: rgba(0,0,0,.3)
+    text-align: center
+    +element('item')
+        margin: 25px 0
+        h2
+            margin-top: 0
+            color: $yellow
+        span
+            display: block
+
+@media screen and (max-width: 728px)
+    .contests
+        width: 100%
+        margin-bottom: 25px
