--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -6,7 +6,8 @@
 
 <main>
     <section class="lead">
-            <article class="container lead__content">
+        <div class="container">
+            <article class="lead__content">
                 <p class="">Welcome on the Polish Ski Jumpers Fan Page for winter season 2016/2017.
                     This website was made as a web developement project, that main goal was to practice Express Js.
                     Please go to <a href="/about" title="Go to About page" class="content__link">'About'</a> section for more details.
@@ -17,24 +18,35 @@
                 <p class="">Welcome in the world of this beautiful sport, where all it matters is pure competition and no negative
                     emotions! Enjoy this journey!</p>
             </article>
-    </section><!--lead-->
-
-    <section class="container details">
-        <div class="row-flex">
-            <div class="">
-                <h2>Last contest</h2>
-                <span><%=prevEvent.date%>, <%=prevEvent.place%><img src="images/<%=prevEvent.country%>.png"></span>
-                <span>Type: <%=prevEvent.type%></span>
-
-                <h2>Next contest</h2>
-                <span><%=nextEvent.date%>, <%=nextEvent.place%><img src="images/<%=nextEvent.country%>.png"></span>
-                <span>Type: <%=nextEvent.type%></span>
-            </div>
-            <iframe class="iframe" src="https://www.youtube.com/embed/I3E2ijxEwf8" frameborder="0" allowfullscreen></iframe>
         </div>
 
+    </section><!--lead-->
+
+    <section class="details">
+        <div class="container">
+            <div class="row-flex">
+                <div class="contests">
+                    <div class="contests__item">
+                        <h2>Last contest</h2>
+                        <span><%=prevEvent.date%>, <%=prevEvent.place%><img src="images/<%=prevEvent.country%>.png"></span>
+                        <span>Type: <%=prevEvent.type%></span>
+
+                    </div>
+                    <div class="contests__item">
+                        <h2>Next contest</h2>
+                        <span><%=nextEvent.date%>, <%=nextEvent.place%><img src="images/<%=nextEvent.country%>.png"></span>
+                        <span>Type: <%=nextEvent.type%></span>
+                    </div>
+
+
+                </div>
+                <iframe class="iframe" src="https://www.youtube.com/embed/vN9HLTqCUXk" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
     </section>
 </main>
+
+<%include partials/templates/footer%>
 
 <%include partials/templates/scripts%>
 </body>
