Added font awesome + link in the footer

--- a/app/views/partials/templates/footer.ejs
+++ b/app/views/partials/templates/footer.ejs
@@ -1,8 +1,16 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__row">
-            <span>Left</span>
-            <span>Right</span>
+            <span>Paweł Marcinkowski &copy; 2017</span>
+            <div>
+                <a class="footer__icon" href="https://github.com/wafel34/" title="Auhor's Github Account">
+                    <span class="fa fa-github" aria-hidden="true"></span>
+                </a>
+                <a class="footer__icon" href="https://www.linkedin.com/in/pawel-marcinkowski/" title="Auhor's LinkedIn Account">
+                    <span class="fa fa-linkedin" aria-hidden="true"></span>
+                </a>
+            </div>
+
         </div>
     </div>
 </footer>
