Added about page/route/styling and content

--- a/app/views/partials/templates/footer.ejs
+++ b/app/views/partials/templates/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__row">
-            <span>Paweł Marcinkowski &copy; 2017</span>
+            <span class="footer__author">Paweł Marcinkowski &copy; 2017</span>
             <div>
                 <a class="footer__icon" href="https://github.com/wafel34/" title="Auhor's Github Account">
                     <span class="fa fa-github" aria-hidden="true"></span>
