--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -19,6 +19,7 @@
 						<li class="navigation-list__list-item"><a href="/">Home</a></li>
 						<li class="navigation-list__list-item"><a href="/team">Team</a></li>
 						<li class="navigation-list__list-item"><a href="/calendar">Calendar</a></li>
+						<li class="navigation-list__list-item"><a href="/about">About</a></li>
 					</ul>	<!--menu list-->
 				</div><!--navbar-collapse-->
 			</div><!--container-->
