--- a/resources/sass/_footer.sass
+++ b/resources/sass/_footer.sass
@@ -15,3 +15,9 @@
         &:hover,
         &:focus
             color: $yellow
+
+
+@media screen and (max-width: 540px)
+    .footer
+        +element('author')
+            font-size: 1.4rem
