Working on navbar styling

--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -1,6 +1,6 @@
 <header class="header">
     <nav class="navbar navbar-fixed-top navigation">
-			<div class="container">
+			<div class="container header-container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
@@ -9,8 +9,8 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-                    <a class="navbar-brand" href="/">
-                        SkiJumping 2017/18
+                    <a class="navbar-brand" href="/" title="Home page">
+                        <span class="brand-image" aria-hidden="true">Logo</span>
                      </a>
 				</div><!--navbar-header-->
 
