added styling navbar for differnt offset in new browsers, must test IE

--- a/app/views/view_about.ejs
+++ b/app/views/view_about.ejs
@@ -31,7 +31,7 @@
             </ul>
         </p>
         <p>
-            <a class="about__link" href="https://github.com/wafel34/" title="Auhor's Github Account">See Github Repository</a>
+            <a class="about__link" href="https://github.com/wafel34/skijumping" title="Auhor's Github Account">See Github Repository</a>
         </p>
         <p>
             <a class="about__link" href="https://www.linkedin.com/in/pawel-marcinkowski/" title="Auhor's LinkedIn Account">See my LinkedIn Profile</a>
