--- a/resources/sass/_hill.sass
+++ b/resources/sass/_hill.sass
@@ -58,6 +58,8 @@
     height: inherit
     border: 3px solid $theme-sunset
     border-radius: 5px
+    position: relative
+    z-index: 0
 
 .hill-description
     background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
