--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-    <nav class="navbar navbar-fixed-top navigation">
+    <nav class="navbar navbar-fixed-top navigation" id="navigation">
 			<div class="container header-container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
