Improved header styling

--- a/resources/sass/_header.sass
+++ b/resources/sass/_header.sass
@@ -50,6 +50,9 @@
 //MEDIA QUERIES
 
 @media screen and (max-width: 767px)
+    .header
+        margin-top: 50px
+
     .header-container
         border-bottom: 2px solid #fff
 
